app/assets/stylesheets/custom.css.scss
.btn-default{
  background-color: #FFC0CB;
}

input, button, select, textarea {
    color: #000000;
}

.greybtn{
  background-color: #D9D9D9;   
}

.bluebtn{
  background-color: #337AB7;
}

.url a{
  color: #E54E95;
}

.tags a{
  color: #3EB9FC;
}

.ratio{
  color: #72e32c; 
}

.text-center{
  text-align: center;
}

